<resources>
    <string name="app_name">PBK_Test</string>

    <string name="buttonKeyGen_name">Gen Key</string>
    <string name="buttonMeetGen_name">Mt Gen</string>
    <string name="buttonMeetVer_name">Mt Ver</string>

    <string name="buttonRun_name">Run Test</string>
    <string name="buttonClear_name">Clear</string>
    <string name="buttonDB_name">Enter DB</string>
    <string name="buttonDeleteAll_name">Delete All</string>
    <string name="buttonDiscrete_name">Disct M</string>
    <string name="buttonBLE_name">BLE M</string>
    <string name="buttonRandom_name">Random</string>

    <string name="buttonSave_name">Save</string>
    <string name="buttonShow_name">Show</string>

    <string name="buttonUpdate_name">Update</string>

    <string name="buttonMeetGenRepeat_name">MtG Rp</string>
    <string name="buttonMeetVerRepeat_name">MtV Rp</string>
    <string name="buttonSaveRepeat_name">Sv Rp</string>

    <string name="buttonDetect_name">DETECT</string>

    <string name="display_name">Anticipated time</string>
    <string name="displayTotal_name">Total time</string>

    <string name="fieldTimes_hint">Times?</string>
    <string name="fieldCount_hint">Count?</string>
</resources>
