<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatabaseActivity">

  <TextView
      android:id="@+id/resultDB"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="14dp"
      android:layout_marginEnd="14dp"
      android:layout_marginBottom="56dp"
      android:gravity="center"
      android:text="@string/display_name"
      android:textSize="22sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.433"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/resultTotal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="14dp"
      android:layout_marginEnd="14dp"
      android:layout_marginBottom="16dp"
      android:gravity="center"
      android:text="@string/displayTotal_name"
      android:textSize="22sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.433"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/resultDB"
      app:layout_constraintVertical_bias="1.0" />

  <TableLayout
      android:id="@+id/tableLayout"
      android:layout_width="393dp"
      android:layout_height="107dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TableLayout
      android:id="@+id/tableLayoutCompressed"
      android:layout_width="392dp"
      android:layout_height="94dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

  <TableLayout
      android:id="@+id/tableBLE"
      android:layout_width="391dp"
      android:layout_height="0dp"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@+id/buttonDeleteAll"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonSaveRepeat"/>

  <Button
      android:id="@+id/buttonMeetVer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="44dp"
      android:onClick="meetVerConcur"
      android:text="@string/buttonMeetVer_name"
      app:layout_constraintStart_toEndOf="@+id/buttonMeetGen"
      app:layout_constraintTop_toTopOf="@+id/buttonMeetGen" />

  <Button
      android:id="@+id/buttonMeetVerRepeat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="2dp"
      android:onClick="meetVerConcurRepeat"
      android:text="@string/buttonMeetVerRepeat_name"
      app:layout_constraintStart_toEndOf="@+id/buttonBLE"
      app:layout_constraintTop_toTopOf="@+id/buttonBLE" />

  <Button
      android:id="@+id/buttonKeyGen"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="14dp"
      android:onClick="generateKey"
      android:text="@string/buttonKeyGen_name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tableLayoutCompressed" />

  <Button
      android:id="@+id/buttonBLE"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="2dp"
      android:onClick="bleMode"
      android:text="@string/buttonBLE_name"
      app:layout_constraintStart_toEndOf="@+id/buttonDiscrete"
      app:layout_constraintTop_toTopOf="@+id/buttonDiscrete" />

  <Button
      android:id="@+id/buttonDiscrete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:onClick="discreteMode"
      android:text="@string/buttonDiscrete_name"
      app:layout_constraintStart_toStartOf="@+id/buttonSave"
      app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

  <EditText
      android:id="@+id/fieldTimes"
      android:layout_width="66dp"
      android:layout_height="39dp"
      android:layout_marginStart="8dp"
      android:ems="10"
      android:hint="@string/fieldTimes_hint"
      android:importantForAutofill="no"
      android:inputType="number"
      app:layout_constraintStart_toEndOf="@+id/buttonSaveRepeat"
      app:layout_constraintTop_toTopOf="@+id/buttonSaveRepeat" />

  <EditText
      android:id="@+id/fieldCount"
      android:layout_width="66dp"
      android:layout_height="39dp"
      android:layout_marginStart="8dp"
      android:ems="10"
      android:hint="@string/fieldCount_hint"
      android:importantForAutofill="no"
      android:inputType="number"
      app:layout_constraintStart_toEndOf="@+id/fieldTimes"
      app:layout_constraintTop_toTopOf="@+id/fieldTimes" />

  <Button
      android:id="@+id/buttonUpdate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="updateConcur"
      android:text="@string/buttonUpdate_name"
      app:layout_constraintStart_toStartOf="@+id/buttonMeetVer"
      app:layout_constraintTop_toTopOf="@+id/buttonShow" />

  <Button
      android:id="@+id/buttonSave"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:onClick="saveConcur"
      android:text="@string/buttonSave_name"
      app:layout_constraintStart_toStartOf="@+id/buttonKeyGen"
      app:layout_constraintTop_toBottomOf="@+id/buttonKeyGen" />

  <Button
      android:id="@+id/buttonShow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="showConcur"
      android:text="@string/buttonShow_name"
      app:layout_constraintStart_toStartOf="@+id/buttonMeetGen"
      app:layout_constraintTop_toTopOf="@+id/buttonSave" />

  <Button
      android:id="@+id/buttonMeetGen"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="44dp"
      android:onClick="meetGenConCur"
      android:text="@string/buttonMeetGen_name"
      app:layout_constraintStart_toEndOf="@+id/buttonKeyGen"
      app:layout_constraintTop_toTopOf="@+id/buttonKeyGen" />

  <Button
      android:id="@+id/buttonMeetGenRepeat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="2dp"
      android:onClick="meetGenConcurRepeat"
      android:text="@string/buttonMeetGenRepeat_name"
      app:layout_constraintStart_toEndOf="@+id/buttonMeetVerRepeat"
      app:layout_constraintTop_toTopOf="@+id/buttonMeetVerRepeat" />

  <Button
      android:id="@+id/buttonDeleteAll"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:onClick="deleteAllConcur"
      android:text="@string/buttonDeleteAll_name"
      app:layout_constraintBottom_toTopOf="@+id/resultDB"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/buttonSaveRepeat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:onClick="saveConcurRepeat"
      android:text="@string/buttonSaveRepeat_name"
      app:layout_constraintStart_toStartOf="@+id/buttonDiscrete"
      app:layout_constraintTop_toBottomOf="@+id/buttonDiscrete" />

  <Button
      android:id="@+id/buttonDetect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:onClick="detectBLE"
      android:text="@string/buttonDetect_name"
      app:layout_constraintEnd_toEndOf="@+id/buttonMeetGenRepeat"
      app:layout_constraintStart_toEndOf="@+id/buttonMeetVerRepeat"
      app:layout_constraintTop_toBottomOf="@+id/buttonMeetGenRepeat" />

</androidx.constraintlayout.widget.ConstraintLayout>